<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddPackageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/architectsdaughter"
            android:gravity="center"
            android:text="@string/package_add_new"
            android:textSize="26dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@color/colorMainLight"
            app:cardCornerRadius="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:strokeColor="@color/colorMainMediumDark"
            app:strokeWidth="2dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_package_name_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:boxBackgroundColor="@color/colorMainLight"
                app:boxStrokeColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_package_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/architectsdaughter"
                    android:hint="@string/hint_package_name"
                    android:inputType="textLongMessage"
                    android:maxLength="30"
                    android:textSize="20dip" />

            </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <Button
            android:id="@+id/add_package_button_add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background_dark"
            android:fontFamily="@font/architectsdaughter"
            android:text="@string/button_add"
            android:textAllCaps="false"
            android:textColor="@color/colorBackground"
            android:textSize="20dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            app:layout_constraintWidth_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>